--- a/about.html
+++ b/about.html
@@ -51,9 +51,7 @@
         <aside id="sidebar">
           <div class="dark">
             <h3><i class="fa fa-users"></i> The Team</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam vel, molestias nostrum sed, 
-                adipisci dicta cumque explicabo distinctio provident voluptatum repellendus amet neque esse 
-                impedit. Debitis voluptate incidunt, aperiam minima?</p>
+            <p>Codeforcoffee & Webdev_bros</p>
           </div>
         </aside>
       </div>
