--- a/services.html
+++ b/services.html
@@ -35,7 +35,7 @@
                     to accomplish a specific computing result or to perform a specific task. Programming involves 
                     tasks such as: analysis, generating algorithms, profiling algorithms' accuracy and resource 
                     consumption, and the implementation of algorithms in a chosen programming language (commonly 
-                    referred to as coding).[1][2] The source code of a program is written in one or more languages 
+                    referred to as coding). The source code of a program is written in one or more languages 
                     that are intelligible to programmers, rather than machine code, which is directly executed by 
                     the central processing unit. The purpose of programming is to find a sequence of instructions 
                     that will automate the performance of a task (which can be as complex as an operating system) 
@@ -50,7 +50,7 @@
                     to accomplish a specific computing result or to perform a specific task. Programming involves 
                     tasks such as: analysis, generating algorithms, profiling algorithms' accuracy and resource 
                     consumption, and the implementation of algorithms in a chosen programming language (commonly 
-                    referred to as coding).[1][2] The source code of a program is written in one or more languages 
+                    referred to as coding). The source code of a program is written in one or more languages 
                     that are intelligible to programmers, rather than machine code, which is directly executed by 
                     the central processing unit. The purpose of programming is to find a sequence of instructions 
                     that will automate the performance of a task (which can be as complex as an operating system) 
@@ -65,7 +65,7 @@
                     to accomplish a specific computing result or to perform a specific task. Programming involves 
                     tasks such as: analysis, generating algorithms, profiling algorithms' accuracy and resource 
                     consumption, and the implementation of algorithms in a chosen programming language (commonly 
-                    referred to as coding).[1][2] The source code of a program is written in one or more languages 
+                    referred to as coding). The source code of a program is written in one or more languages 
                     that are intelligible to programmers, rather than machine code, which is directly executed by 
                     the central processing unit. The purpose of programming is to find a sequence of instructions 
                     that will automate the performance of a task (which can be as complex as an operating system) 
