--- a/services.html
+++ b/services.html
@@ -31,7 +31,7 @@
             <ul id="services">
               <li>
                 <h3>Website Starter Package</h3>
-                <p> Computer programming is the process of designing and building an executable computer program
+                <p> (( Demo Work )) Computer programming is the process of designing and building an executable computer program
                     to accomplish a specific computing result or to perform a specific task. Programming involves 
                     tasks such as: analysis, generating algorithms, profiling algorithms' accuracy and resource 
                     consumption, and the implementation of algorithms in a chosen programming language (commonly 
@@ -42,11 +42,11 @@
                     on a computer, often for solving a given problem. Proficient programming thus often requires 
                     expertise in several different subjects, including knowledge of the application domain, 
                     specialized algorithms, and formal logic.</p>
-                <p>$ 1,000</p>
+                <p></p>
               </li>
               <li>
                 <h3>Website Professional Package</h3>
-                <p> Computer programming is the process of designing and building an executable computer program
+                <p> (( Demo Work )) Computer programming is the process of designing and building an executable computer program
                     to accomplish a specific computing result or to perform a specific task. Programming involves 
                     tasks such as: analysis, generating algorithms, profiling algorithms' accuracy and resource 
                     consumption, and the implementation of algorithms in a chosen programming language (commonly 
@@ -57,11 +57,11 @@
                     on a computer, often for solving a given problem. Proficient programming thus often requires 
                     expertise in several different subjects, including knowledge of the application domain, 
                     specialized algorithms, and formal logic..</p>
-                <p>$ 5,000</p>
+                <p></p>
               </li>
               <li>
                 <h3>E-commerce Package</h3>
-                <p> Computer programming is the process of designing and building an executable computer program
+                <p> (( Demo Work )) Computer programming is the process of designing and building an executable computer program
                     to accomplish a specific computing result or to perform a specific task. Programming involves 
                     tasks such as: analysis, generating algorithms, profiling algorithms' accuracy and resource 
                     consumption, and the implementation of algorithms in a chosen programming language (commonly 
@@ -72,7 +72,7 @@
                     on a computer, often for solving a given problem. Proficient programming thus often requires 
                     expertise in several different subjects, including knowledge of the application domain, 
                     specialized algorithms, and formal logic.</p>
-                <p>$ 8,000</p>
+                <p></p>
               </li>
             </ul>
         </article>
